[gd_scene load_steps=14 format=2]

[ext_resource path="res://plugins/minigames/bowling/minigame.gd" type="Script" id=1]
[ext_resource path="res://plugins/minigames/bowling/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/countdown/countdown.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/models/cannon/scene.glb" type="PackedScene" id=5]
[ext_resource path="res://plugins/minigames/bowling/room/room.glb" type="PackedScene" id=6]
[ext_resource path="res://assets/textures/wood_planks/wood2_COLOR.jpg" type="Texture" id=7]
[ext_resource path="res://plugins/minigames/bowling/box.tscn" type="PackedScene" id=8]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 2, 0.1, 2 )

[sub_resource type="SpatialMaterial" id=2]
resource_name = "wood"
params_diffuse_mode = 4
params_specular_mode = 4
albedo_texture = ExtResource( 7 )
roughness = 0.5
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
uv1_scale = Vector3( 5, 5, 5 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 3, 0.125, 3 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.1, 1.25, 3 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 3, 2, 0.1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.375, -4 )

[node name="Player2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, -2 )

[node name="Player3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.375, -4 )

[node name="Player4" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0.3, 3 )
is_solo_player = true

[node name="scene" parent="Player4" instance=ExtResource( 5 )]
transform = Transform( -0.05, 0, 1.62921e-08, 0, 0.05, 0, -1.62921e-08, 0, -0.05, 0, 0, 0.75 )

[node name="MeshInstance" type="MeshInstance" parent="Player4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0.25 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="room" parent="." instance=ExtResource( 6 )]

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.125, -3 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 3 )

[node name="Wall" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.1, 1.75, -3 )
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Wall"]
shape = SubResource( 4 )

[node name="Wall2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1, 1.75, -3 )
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Wall2"]
shape = SubResource( 4 )

[node name="Wall3" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0.1 )
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Wall3"]
shape = SubResource( 5 )

[node name="Wall4" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 0.948964, -0.315384, 0, 0.315384, 0.948964, 0, 0.5, -9.5 )
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Wall4"]
shape = SubResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, 0, 3, 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2.58048, 6.14296 )
light_energy = 0.2
shadow_enabled = true
shadow_bias = 0.0

[node name="DirectionalLight2" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.726671, -0.686986, 0, 0.686986, 0.726671, 0, 0.488178, 6.14296 )
light_energy = 0.1

[node name="EndTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Screen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Screen"]
visible = false
anchor_right = 1.0
margin_top = 160.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 3 )
text = "BOWLING_FINISH_MSG"
align = 1

[node name="Time" type="Label" parent="Screen"]
visible = false
anchor_right = 1.0
margin_top = 60.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "0.00"
align = 1
clip_text = true

[node name="Countdown" parent="Screen" instance=ExtResource( 4 )]

[node name="StaticBody" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 4, -1 )

[node name="StaticBody2" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 4, -1 )

[node name="StaticBody3" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -1 )

[node name="StaticBody4" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 4, -1 )

[node name="StaticBody5" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 4, -1 )
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="finish" from="Screen/Countdown" to="." method="_on_Countdown_finish"]
